assets/styles/voting.scss
// START NEW SCSS

//@import "platinum/platinum";

html {
  overflow-x: hidden;
}

body {
  overflow-x: hidden;
  color: white;
}

.center-container {
  width: 1300px;
  padding: 10px;
  z-index: 20;
  margin: 0 auto;
  position: relative;

  @media screen and (max-width: 1400px) {
    width: 100%;
  }
}

header {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 36px;

  @media screen and (max-width: 1000px) {
    justify-content: space-between;
  }

  @media screen and (max-width: 500px) {
    justify-content: center;
  }

  .logo {
    height: 110px;
    display: block;
    margin-right: auto;

    @media screen and (max-width: 1000px) {
      margin-right: 20px;
    }

    @media screen and (max-width: 500px) {
      display: none;
    }

    img {
      max-width: 100%;
      max-height: 100%;
    }
  }

  .right-container {
    max-width: 50%;
    overflow: hidden;
    filter: brightness(1);
    padding: 6px;

    .inner-border {
      border: 2px solid rgba(149, 149, 147, 0.75);
      padding: 10px;
      mix-blend-mode: color-dodge;
    }

    .inner-background {
      background-image: url("/2024images/planks-seamless.png");
      position: absolute;
      height: 100%;
      width: 100%;
      top: 0px;
      z-index: -1;
      left: 0px;
      transform: rotate(1deg) scaleY(1.5);
      filter: brightness(0.7) saturate(0.6);
      box-shadow: inset 0 0 8px rgb(11, 9, 9);
    }

    .title-text {
      font-family: "Western Title";
      color: #999999f5;
      font-size: 74px;
      position: relative;
      text-transform: uppercase;
      text-align: center;
      line-height: 1;
      top: 8px;
  
      .line-1 {
        //text-transform: uppercase;
      }
  
      .line-2 {
        font-size: 24px;
        //color: #CF282F;
      }
  
      // when we move to two lines of header text
      @media screen and (max-width: 1200px) {
        font-size: 50px;
      }
  
  
      @media screen and (max-width: 500px) {
        font-size: 40px;
        transform: none;
        text-align: center;
      }
    }
  }
}

.conspiracy {
  position: absolute;
  width: 46vw;
  left: -250px;
}

.plank-background {
  &::before {
    background-image: url("/2024images/planks-seamless.png");
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0px;
    z-index: -1;
    left: 0px;
    transform: rotate(1deg) scaleY(1.5);
    filter: brightness(0.7) saturate(0.6);
    content: "";
  }

  &::after {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0px;
    left: 0px;
    box-shadow: inset 0 0 15px rgb(11, 9, 9);
    content: "";
  }

  .plank-inner-border {
    padding: 10px;
    height: 100%;

    &::after {
      border: 2px solid rgba(149, 149, 147, 0.75);
      mix-blend-mode: color-dodge;
      height: 100%;
      width: 100%;
      content: "";
      display: block;
    }
  }

  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  z-index: -1;
  overflow: clip;
}

/* Award` Header (including left/right navigation buttons) */
.award-header {
  display: flex;
  justify-content: center;
  text-align: center;
  position: relative;
  max-width: 1100px;
  align-items: center;
  margin: 0 auto 20px;
  font-family: 'Young Heart', sans-serif;
  text-transform: capitalize;
  background-image: url("/2024images/paper2.jpg");
  -webkit-mask-image: url(/2023images/mask.png);
  -webkit-mask-size: cover;

  //background-image: url(/2020images/tape.png);
  //background-size: 790px;
  //background-position: center top;
  //background-repeat: no-repeat;

  @media screen and (max-width: 1000px) {
    flex-wrap: wrap;
    column-gap: 10px;
  }

  .award-name-container {
    //background: #fff;
    margin: 0 12px;
    padding: 12px 8px;
    max-width: 800px;

    color: rgba(180,80,22,0.8);
    text-shadow:
        0px 0px 2px rgba(0,0,0,0.3),
        0px 0px 100px rgba(0,0,0,1),
        0px 0px 20px rgba(255,255,255,1);

    //-webkit-mask-image: url(/2022images/mask.png);
    //-webkit-mask-size: cover;

    flex-grow: 1;
    order: 2;

    @media screen and (max-width: 1000px) {
      width: 100%;
      order: 0;
    }
  }

  .award-name-container.oneLine .awardName {
    margin-top: -5px;
  }

  .award-name {
    font-size: 2.7em;
    line-height: 100%;
    margin-top: 10px;

    /*
    text-shadow:
            1px -1px #4EA24A,
            2px -2px #4EA24A,
            3px -3px #4EA24A,
            -1px 1px #DA505F,
            -2px 2px #4EA24A,
            -3px 3px #4EA24A,
            1px 1px #DA505F,
            2px 2px #061019,
            3px 3px #061019,
            -4px 4px #061019;
    */
    //5px 5px #4EA24A,
    //6px 6px #E5E37C,
    //7px 7px #061019,
    //-8px 8px #467B81,
    //-9px 9px #467B81,
    //-10px 10px #467B81,
    //11px 11px #E5E37C,
    //12px 12px #E5E37C,
    //-13px 13px #AB1119,
    //-14px 14px #AB1119,
    //-15px 15px #AB1119;


    @media screen and (max-width: 800px) {
      font-size: 2em;
    }
  }

  .award-subtitle {
    font-size: 1.2em;

    /*
    color: #0EBF8C;

    text-shadow:
            1px 1px #DA505F,
            2px 2px #061019,
            3px 3px #061019,
            -4px 4px #061019;
    */
  }

  .navigation {
    width: 140px;
    height: 98px;
    cursor: pointer;
    display: block;
    background-size: contain;
    background-repeat: no-repeat;
    flex-shrink: 0;

    &:hover {
      transform: translateY(3px);
    }

    &.left {
      background-image: url("/2024images/revolver-sketch.png");
      order: 1;
    }

    &.right {
      background-image: url("/2024images/revolver-sketch.png");
      order: 3;
      transform: scaleX(-1);

      &:hover {
        transform:translateY(3px) scaleX(-1) ;
      }
    }
  }
}
/* ... */

